--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 </head>
 <body>
     <nav>
-        <button id="bookSelect" onclick="bookMenu.classList.toggle('hidden')">
+        <button id="bookSelect" onclick="menuToggle()">
             <span id="bookSelectText"></span>
             <svg width="10" height="10" viewBox="0 0 13.229167 13.229167">
                 <path style="fill:currentColor" d="m 0.32921431,3.8210857 c -0.38689941,0.3869009 -0.38689941,1.0098501 0,1.3967494 L 4.5194606,9.408081 5.9162092,10.80483 c 0.3868998,0.386899 1.0098493,0.386899 1.3967482,0 L 8.7097063,9.408081 12.899953,5.2178351 c 0.386899,-0.3868993 0.386899,-1.0098485 0,-1.3967494 l -1.39675,-1.3967482 c -0.386897,-0.3869001 -1.009848,-0.3868994 -1.396749,0 L 6.6145834,5.9162088 3.1227118,2.4243375 c -0.3868996,-0.3868994 -1.0098494,-0.3868994 -1.3967488,0 z" />
             </svg>
         </button>
-        <div id="bookMenu" class="hidden"></div>
+        <div id="selectMenu" class="hidden"></div>
         <button id="lightBtn" arial-label="Toggle light/dark mode" onclick="lightToggle()">
             <svg id="sunIcon" width="20" height="20" viewBox="0 0 13.229167 13.229167">
                 <path style="fill:currentColor;" d="M 9.3498534,6.6145828 A 2.7352715,2.7352715 0 0 1 6.6145835,9.3498557 2.7352715,2.7352715 0 0 1 3.8793122,6.6145828 2.7352715,2.7352715 0 0 1 6.6145835,3.8793114 2.7352715,2.7352715 0 0 1 9.3498534,6.6145828 Z" />
@@ -63,9 +63,10 @@
     </button>
     <div id="attributionDiv" class="hidden">
         <p>This interlinear glossed text uses the standard <a href="https://www.eva.mpg.de/lingua/resources/glossing-rules.php" target="_blank">Leipzig glossing rules</a>.</p>
-        <p>The gloss was generated using lexical and morphological data from the <a href="https://hb.openscriptures.org/" target="_blank">Open Scriptures Bible project</a>, which is under a <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons Attribution 4.0 International license</a>.</p>
         <p>The original Hebrew text is from a unicode/XML version of the <a href="https://www.tanach.us/Tanach.xml" target="_blank">Westminster Leningrad Codex</a> (WLC), a digitization of the Leningrad Codex.</p>
-        <p>The definitions come from James Strong's "A Concise Dictionary of the Words in the Hebrew Bible with their Renderings in the King James Version" (1894), transliterated by the Open Scriptures Bible Project under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>.</p>
+        <p>The gloss was generated using lexical and morphological data from the <a href="https://hb.openscriptures.org/" target="_blank">Open Scriptures Bible project</a>, which is under a <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons Attribution 4.0 International license</a>.<br>
+           The definitions come from James Strong's "A Concise Dictionary of the Words in the Hebrew Bible with their Renderings in the King James Version" (1894), transliterated by the Open Scriptures Bible Project under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>.<br>
+           The data has been edited to render the name of God as "YHWH".</p>
         <p>Hebrew text is displayed in the <a href="https://software.sil.org/ezra/" target="_blank">Ezra SIL</a> font, based on the typography of the Biblia Hebraica Stuttgartensia (BHS).</p>
     </div>
     <div id="rcontainer" onclick="info(event.target)">
